SERVER-33879 config.transactions is not updated during startup replication recovery