src/mongo/db/session.h
@@ -302,6 +302,16 @@ public:
     static std::vector<repl::OplogEntry> addOpsForReplicatingTxnTable(
         const std::vector<repl::OplogEntry>& ops);
 
+    /**
+     * Returns a new oplog entry if the given entry has transaction state embedded within in.
+     * The new oplog entry will contain the operation needed to replicate the transaction
+     * table.
+     * Returns boost::none if the given oplog doesn't have any transaction state or does not
+     * support update to the transaction table.
+     */
+    static boost::optional<repl::OplogEntry> createMatchingTransactionTableUpdate(
+        const repl::OplogEntry& entry);
+
 private:
     void _beginOrContinueTxn(WithLock, TxnNumber txnNumber, boost::optional<bool> autocommit);
 
